--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
 @font-face {
     font-family: 'FonteLogo';
     src: url("../fonts/bubblegum-sans-regular.otf");
@@ -24,7 +25,7 @@ p {
 
 header#cabecalho img#icone {
     position: absolute;
-    left: 955px;
+    left: 960px;
     top: 70px;
 }
 
@@ -44,7 +45,7 @@ header#cabecalho h1 {
 }
 
 header#cabecalho h2 {
-    font-family: Arial, sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     color: #888888;
     font-size: 15pt;
     padding: 0px;
@@ -90,7 +91,7 @@ nav#menu ul {
     text-transform: uppercase;
     position: absolute;
     top: -20px;
-    left: 490px;
+    left: 480px;
 }
 
 nav#menu li {
